--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "json-server": "^0.17.4",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
+    "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
     "leaflet-draw": "^1.0.4",
     "leaflet.fullscreen": "^4.0.0",
