--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-leaflet-draw": "^0.20.6",
     "react-leaflet-fullscreen": "^4.1.1",
     "react-router-dom": "^7.5.0",
+    "react-spinners": "^0.17.0",
     "recharts": "^2.15.3",
     "screenfull": "^6.0.2",
     "shapefile": "^0.6.6",
